# tensorCompress

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp  tensor.hpp  video.cpp  video.hpp
src/core/: compression.cpp  compression.hpp  hosvd.hpp  tensor.hpp  truncation.hpp
src/tests/: tests.cpp
src/utils/: utils.hpp
src/video/: ffmpegutils.hpp  frameconverter.cpp  frameconverter.hpp  video.cpp  video.hpp
